# promise

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  sonar-project.properties
.github/: FUNDING.yml
.github/prompts/: generate-release-note.prompt.md
.github/workflows/: build.yml  gcov-coverage.yml  pr-tests.yml
include/promise/: CVPromise.h  MessageQueue.h  Pool.h  StatePromise.h  core.h  promise.h
include/promise/core/: Handle.h  Memcheck.h  MessageQueueProxy.inl  Promise.h  Reject.h  Reject.inl  Resolve.h  Resolve.inl  Resolver.h  VPromise.h  VPromise.inl  ValuePromise.h  WPromise.h  concepts.inl  core.h  core.inl  helpers.h  helpers.inl
include/promise/details/: ExceptionWrapper.inl  Handle.inl  Memcheck.inl  Promise.inl  Reject.inl  Resolve.inl  Resolver.inl  ValuePromise.inl  WPromise.inl  helpers.inl
include/promise/impl/: Promise.inl
src/: CVPromise.cpp  Memcheck.cpp  MessageQueue.cpp  Promise.cpp  Reject.cpp  Resolve.cpp  StatePromise.cpp  Untitled-1.txt  promise_test.cpp
test/: CMakeLists.txt  TestCommon.h  test_promise.cpp  test_promise_branches.cpp  test_promise_chains.cpp  test_promise_components.cpp  test_promise_deep_branches.cpp  test_promise_rvalue_and_resolver.cpp
